# bounded

./: .clang-format  CMakeLists.txt  readme.org
include/bounded/: bounded.hpp  interval.hpp
include/bounded/impl/: macros.hpp  passing_traits.hpp
test/: CMakeLists.txt  test.cpp
